# stadium-core

./: README.md  install_and_format.py  push_code.bat  push_fixes.bat  pyproject.toml  pytest.ini  requirements-dev.txt  run_mypy.py
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py
app/api/: __init__.py
app/core/: __init__.py  context_engine.py  firestore_client.py  llm.py  schemas.py
tests/: __init__.py  test_coverage_edge_cases.py  test_engine.py  test_journey.py  test_js_behavior.py  test_playwright.py  test_production.py
