[project]
name = "phoenix-stadium"
version = "1.2.0"
description = "Phoenix Stadium matchday assistant — Erlang-C queueing engine with multilingual fan routing and live ops dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jagta" }]
keywords = ["stadium", "queueing", "fastapi", "accessibility", "fifa2026"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.12.5,<3.0.0",
    "jinja2>=3.1.6",
    "bleach>=6.4.0",
    "slowapi>=0.1.9",
    "starlette>=0.41.3",
    "google-cloud-firestore>=2.19.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # bandit (security)
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN101",  # self annotation not needed
    "ANN102",  # cls annotation not needed
    "S101",    # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = true
disallow_untyped_defs = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing --cov-fail-under=90"

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "app/templates/*", "app/static/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
